--- a/urunler.html
+++ b/urunler.html
@@ -1,247 +1,114 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAY Plastik Ürünler</title>
-    <style>
-       body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-.sidebar {
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: -250px;
-    background-color: #333;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    z-index: 1;
-}
-.sidebar a {
-    padding: 15px 20px;
-    text-decoration: none;
-    font-size: 18px;
-    color: #fff;
-    display: block;
-    transition: 0.3s;
-}
-.sidebar a:hover {
-    background: #555;
-}
-.sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-.openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background: #444;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 2;
-    border-radius: 4px;
-}
-.openbtn:hover {
-    background: #555;
-}
-#main {
-    transition: margin-left 0.5s;
-    padding: 20px;
-    width: 100%;
-}
-header {
-    background: #444;
-    color: #fff;
-    padding: 20px 0;
-    border-bottom: #222 3px solid;
-    text-align: center;
-}
-header h1 {
-    margin: 0;
-    font-size: 28px;
-}
-form {
-    background: #fff;
-    padding: 20px;
-    margin-top: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-}
-form div {
-    margin-bottom: 15px;
-}
-form label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #444;
-}
-form input[type="text"], form input[type="number"], form select, form input[type="date"] {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    transition: border-color 0.3s;
-}
-form input[type="text"]:focus, form input[type="number"]:focus, form select:focus, form input[type="date"]:focus {
-    border-color: #444;
-    outline: none;
-}
-form button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background: #444;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 4px;
-    transition: background 0.3s;
-}
-form button:hover {
-    background: #555;
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    background: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-}
-table, th, td {
-    border: 1px solid #ddd;
-}
-th, td {
-    padding: 12px;
-    text-align: left;
-}
-th {
-    background: #444;
-    color: white;
-    font-weight: bold;
-}
-td {
-    background: #f9f9f9;
-}
-.add-product, .add-customer {
-    display: block;
-    width: calc(50% - 20px);
-    padding: 15px;
-    background: #444;
-    color: #fff;
-    border: none;
-    text-align: center;
-    margin: 20px 10px 0 10px;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background 0.3s;
-}
-.add-product:hover, .add-customer:hover {
-    background: #555;
-}
-.product-list {
-    margin-top: 20px;
-    background: #fff;
-    padding: 20px;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-}
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MAY Plastik Ürünler</title>
+  <link rel="stylesheet" href="urunler.css" />
 </head>
 <body>
-    <header>
-        <h1>MAY Plastik Ürünler</h1>
-    </header>
-    <div class="container">
-        <form id="productForm">
-            <div>
-                <label for="productName">Ürün İsmi</label>
-                <input type="text" id="productName" required>
-            </div>
-            <div>
-                <label for="productWeight">Ağırlık (kg)</label>
-                <input type="number" id="productWeight" required>
-            </div>
-            <div>
-                <label for="productSize">Boyut</label>
-                <input type="text" id="productSize" required>
-            </div>
-            <button type="submit">Ürünü Kaydet</button>
-        </form>
-        <table id="productsTable">
-            <thead>
-                <tr>
-                    <th>Ürün İsmi</th>
-                    <th>Ağırlık (kg)</th>
-                    <th>Boyut</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Ürünler burada görünecek -->
-            </tbody>
-        </table>
-    </div>
-    <script>
-        document.getElementById('productForm').addEventListener('submit', function(event) {
-            event.preventDefault();
+  <header>
+    <h1>MAY Plastik Ürünler</h1>
+  </header>
 
-            var productName = document.getElementById('productName').value;
-            var productWeight = document.getElementById('productWeight').value;
-            var productSize = document.getElementById('productSize').value;
+  <div class="container">
+    <form id="productForm">
+      <div>
+        <label for="productName">Ürün İsmi</label>
+        <input type="text" id="productName" required />
+      </div>
+      <div>
+        <label for="productWeight">Ağırlık (kg)</label>
+        <input type="number" id="productWeight" required />
+      </div>
+      <div>
+        <label for="productSize">Boyut</label>
+        <input type="text" id="productSize" required />
+      </div>
+      <button type="submit">Ürünü Kaydet</button>
+    </form>
 
-            var product = {
-                name: productName,
-                weight: productWeight,
-                size: productSize
-            };
+    <table id="productsTable">
+      <thead>
+        <tr>
+          <th>Ürün İsmi</th>
+          <th>Ağırlık (kg)</th>
+          <th>Boyut</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-            var products = JSON.parse(localStorage.getItem('ayz_plastik_products')) || [];
-            products.push(product);
-            localStorage.setItem('ayz_plastik_products', JSON.stringify(products));
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js"></script>
 
-            addProductToTable(product);
-            document.getElementById('productForm').reset();
-        });
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+      getDocs
+    } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js";
 
-        function addProductToTable(product) {
-            var table = document.getElementById('productsTable').getElementsByTagName('tbody')[0];
-            var newRow = table.insertRow();
+    const firebaseConfig = {
+      apiKey: "AIzaSyBlaY1DIt97bCTcv2XK_Zqqp2LgAEzvlYI",
+      authDomain: "may-plastik-siparis.firebaseapp.com",
+      projectId: "may-plastik-siparis",
+      storageBucket: "may-plastik-siparis.appspot.com",
+      messagingSenderId: "550900866963",
+      appId: "1:550900866963:web:77af1c760ea1518dd39266"
+    };
 
-            var cell1 = newRow.insertCell(0);
-            var cell2 = newRow.insertCell(1);
-            var cell3 = newRow.insertCell(2);
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-            cell1.textContent = product.name;
-            cell2.textContent = product.weight;
-            cell3.textContent = product.size;
-        }
+    document.getElementById("productForm").addEventListener("submit", async function (event) {
+      event.preventDefault();
 
-        window.onload = function() {
-            var products = JSON.parse(localStorage.getItem('ayz_plastik_products')) || [];
-            products.forEach(addProductToTable);
-        };
-    </script>
+      const productName = document.getElementById("productName").value;
+      const productWeight = parseFloat(document.getElementById("productWeight").value);
+      const productSize = document.getElementById("productSize").value;
+
+      const product = {
+        name: productName,
+        weight: productWeight,
+        size: productSize
+      };
+
+      try {
+        await addDoc(collection(db, "products"), product);
+        alert("Ürün başarıyla kaydedildi ✅");
+        document.getElementById("productForm").reset();
+        loadProducts();
+      } catch (error) {
+        console.error("Ürün eklenemedi ❌", error);
+      }
+    });
+
+    function addProductToTable(product) {
+      const table = document.getElementById("productsTable").getElementsByTagName("tbody")[0];
+      const newRow = table.insertRow();
+
+      newRow.insertCell(0).textContent = product.name;
+      newRow.insertCell(1).textContent = product.weight;
+      newRow.insertCell(2).textContent = product.size;
+    }
+
+    async function loadProducts() {
+      const tableBody = document.getElementById("productsTable").getElementsByTagName("tbody")[0];
+      tableBody.innerHTML = "";
+
+      const snapshot = await getDocs(collection(db, "products"));
+      snapshot.forEach((doc) => {
+        const product = doc.data();
+        addProductToTable(product);
+      });
+    }
+
+    window.onload = loadProducts;
+  </script>
 </body>
 </html>
